# aws-lakeformation-best-practices

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  pyvenv.cfg
adopting-lake-formation/considerations-when-adopting-lake-formation/: index.html
adopting-lake-formation/general-best-practices/: index.html
adopting-lake-formation/lake-formation-adoption-modes/: index.html
adopting-lake-formation/overview/: index.html
content/: index.md
content/adopting-lake-formation/: considerations-when-adopting-lake-formation.md  general-best-practices.md  lake-formation-adoption-modes.md  lake-formation-transition-guide-single-account.md  overview.md
content/data-sharing/: cross-account-faq.md  cross-account-versions.md  general-data-sharing.md  overview.md  updating-cross-account-sharing-versions.md  upgrading-cross-account-versions.md
content/lf-tags/: basics.md  best-practices.md  common-ontologies.md  developing-an-lftag-ontology.md  example-usecase.md  index.md  limitations.md  overview.md
data-sharing/cross-account-faq/: index.html
data-sharing/cross-account-versions/: index.html
data-sharing/general-data-sharing/: index.html
data-sharing/overview/: index.html
data-sharing/upgrading-cross-account-versions/: index.html
lf-tags/: index.html
lf-tags/basics/: index.html
lf-tags/best-practices/: index.html
lf-tags/common-ontologies/: index.html
lf-tags/developing-an-lftag-ontology/: index.html
lf-tags/example-usecase/: index.html
lf-tags/limitations/: index.html
lf-tags/overview/: index.html
search/: search_index.json
(+17 files in other folders)
