[tool.poetry]
name = "aws-lakeformation-best-practices-clean"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Creative Commons Attribution-ShareAlike 4.0 International Public License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.29"
mkdocs-pymdownx-material-extras = "^2.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
